--- a/plugins/ToDoPlugin/android/build.gradle
+++ b/plugins/ToDoPlugin/android/build.gradle
@@ -16,6 +16,7 @@ buildscript {
 }
 
 apply plugin: 'com.android.library'
+apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
     namespace "io.ionic.crossplatform.plugins.todo"
@@ -51,6 +52,19 @@ repositories {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':capacitor-android')
+
+    // DI (Koin)
+    api(project.dependencies.platform("io.insert-koin:koin-bom:4.0.3"))
+    api("io.insert-koin:koin-core")
+    api("io.insert-koin:koin-android")
+
+    // Threads (Coroutines)
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0"
+
+    // JSON Parsing (GSon)
+    implementation 'com.google.code.gson:gson:2.13.1'
+
     implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
